--- a/style.css
+++ b/style.css
@@ -2,24 +2,30 @@
     padding: 0;
     margin: 0;
 }
-.body{
+
+.body {
     height: 100vh;
     width: 100vw;
     background-color: aqua;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    
 }
-.board1, .board2{
-    background: url(board.jpg) no-repeat  ;
-    height:757px;
+
+.board1,
+.board2 {
+    background: url(new\ board.jpg) no-repeat;
+    height: 757px;
     width: 790px;
-    background-color: red;
+    /* background-color: red; */
     display: grid;
-    grid-template-rows: repeat(10,1fr);
-    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(10, 1fr);
 }
-.dice{
+
+
+.dice {
     width: 20%;
     margin: 0;
     display: flex;
@@ -28,15 +34,36 @@
     flex-direction: column;
     /* border: 2px solid black; */
 }
-.head{
-    background: linear-gradient(rgb(0, 255, 110) ,rgb(10, 101, 68));
+
+@media (max-width: 430px) {
+
+    .body {
+        flex-direction: column;
+        
+    }
+
+    .board1,
+    .board2 {
+        background: url(board.jpg) no-repeat;
+        height: 300px;
+        width: 300px;
+        background-color: red;
+    }
+    .dice {
+        width: 38%;
+       
+    }
+}
+.head {
+    background: linear-gradient(rgb(0, 255, 110), rgb(10, 101, 68));
     border: 2px solid rgb(0, 55, 128);
     transform: scale(0.5);
     border-radius: 9px;
-    
+
 }
-.head2{
-    background: linear-gradient(rgb(0, 247, 255) ,rgb(10, 16, 101));
+
+.head2 {
+    background: linear-gradient(rgb(0, 247, 255), rgb(10, 16, 101));
     border: 2px solid rgb(0, 55, 128);
     transform: scale(0.5);
     border-radius: 9px;
